:bug: component editor too wide

--- a/src/Components/Editor/ComponentEditor.css
+++ b/src/Components/Editor/ComponentEditor.css
@@ -1,4 +1,5 @@
 .ComponentEditor-Root {
   background-color: darkgray;
   width: 250px;
+  overflow: hidden;
 }
